Fixed two-column layout on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ footer i {
     color: #ff6700;
 }
 
-/*-----------------------------Modified w3schools Modal Gallery---------------------------------*/
+/*-----------------------------Modified w3schools.com Modal Gallery---------------------------------*/
 .modalgallery .row {
     margin-top: 10px;
 }
@@ -178,11 +178,10 @@ footer i {
   cursor: pointer;
 }
 
-/* 100% Image Width on Smaller Screens 
+/* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
   .modal-content {
-    
+    width: 100%;
     max-height: 80vh;
   }
 }
-*/
